build_output_final.log

> sysm_native@1.0.0 build /workspaces/codespaces-blank/sysm
> expo export --platform web

React Compiler enabled
Starting Metro Bundler
Static rendering is enabled. Learn more: https://docs.expo.dev/router/reference/static-rendering/
Web node_modules/expo-router/entry.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
λ node_modules/expo-router/node/render.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web node_modules/expo-router/entry.js ▓▓▓▓░░░░░░░░░░░░ 27.4% (11/21)
λ node_modules/expo-router/node/render.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░ 95.8% (2440/2493)
λ node_modules/expo-router/node/render.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░ 95.5% (2458/2515)
Web Bundling failed 16203ms node_modules/expo-router/entry.js (2493 modules)
SyntaxError: Error: /workspaces/codespaces-blank/sysm/components/MediaGallery.tsx: Expected corresponding JSX closing tag for <SafeView>. (117:4)

  115 |         </View>
  116 |       ))}
> 117 |     </View>
      |     ^
  118 |   );
  119 | }
  120 |
 ELIFECYCLE  Command failed with exit code 1.
